# gorka

./: .gitignore  AUTHOR.md  BUGS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL  LICENSE.MIT  README.md  SECURITY.md  clippy.toml  deny.toml  how --stat -1  justfile  rustfmt.toml  taplo.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml  other_stuff.md
.github/workflows/: ci.yml  semantic-pull-request.yml
benches/: README.md  bitio_bench.rs  decoder_bench.rs  encode_bench.rs  raw_bitio_bench.rs  stream_bench.rs
docs/: BENCHMARKS.md  DECODER.md  ENCODING.md  FORMAT.md  PROJECT_STRUCTURE.md  TESTING.md
examples/: basic_encode.rs  compare.rs  edge_cases.rs  encode_decode.rs  no_std_demo.rs  no_std_demo_raw.rs  stream_basic.rs  stream_performance.rs  streaming.rs
src/: error.rs  lib.rs  prelude.rs
src/bits/: mod.rs  raw_writer.rs  reader.rs  writer.rs
src/codec/: cdma.rs  codec_trait.rs  decoder.rs  delta.rs  encoder.rs  fdma.rs  mod.rs  registry.rs  stream.rs  zigzag.rs
src/codec/format/: version.rs
src/domain/: mod.rs
src/domain/gnss/: identifiers.rs  mod.rs
src/domain/signal/: cn0.rs  mod.rs
src/domain/units/: hertz.rs  millihz.rs  millimeter.rs  mod.rs
src/gnss/: beidou.rs  cdma.rs  constellation.rs  fdma.rs  frame.rs  galileo.rs  glonass.rs  gps.rs  measurement.rs  mod.rs  types.rs
src/io/: mod.rs
src/pipeline/: decoder.rs  mod.rs  stream.rs
src/wire/: compatibility.rs  format.rs  header.rs  mod.rs
tests/: bit_property.rs  bit_raw_property.rs  codec_property.rs  compression_ratio.rs  encoder_tests.rs  glonass_sample.rs  test_bitstream.rs  test_raw_bitwriter.rs
