[package]
name = "gorka"
version = "0.2.0"
edition = "2021"
authors = ["Mikhail Zhuravlev"]
description = "High-performance GNSS time-series compression codec"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MiCkEyZzZ/gorka"
readme = "README.md"
keywords = ["gnss", "compression", "time-series", "glonass", "codec"]
categories = ["compression", "science"]

[lib]
name = "gorka"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
alloc = []

# optional feature для rand
rand = ["dep:rand"]

[dependencies]
rand = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
flate2 = "1.0"
proptest = "1.11.0"

[[bench]]
name = "encode_bench"
path = "benches/encode_bench.rs"
harness = false

[[bench]]
name = "bitio_bench"
path = "benches/bitio_bench.rs"
harness = false

[[example]]
name = "streaming"
path = "examples/streaming.rs"
required-features = ["std"]

[[example]]
name = "compare"
path = "examples/compare.rs"
required-features = ["std"]
